# SurfaceRec_Unity3D

./: .gitignore  CMakeLists.txt  GeometryProcessing.sln  GeometryProcessing.vcxproj  GeometryProcessing.vcxproj.filters  README.md  Test Renderer.sln  Test Renderer.vcxproj  Test Renderer.vcxproj.filters  errors.txt  imgui.ini  logs.txt  notcodedpaths.txt  warnings.txt
3rdPartyLibraries/Includes/: stb_image.h
3rdPartyLibraries/Includes/glad/: glad.h
3rdPartyLibraries/Libs/: assimp.lib  desktop.ini  flatbuffers.lib  gflip3d.lib  glfw3.lib  tet-d.lib  tet-r.lib
3rdPartyLibraries/geometrycentral/surface/: signpost_intrinsic_triangulation.ipp
Assets/: ReconstructedMat.mat  ReconstructionEditor.cs  ReconstructionScript.cs
Content/: FirstComputeShader.comp  MC.comp  PlaneRendererShader.frag  PlaneRendererShader.vert  PointRendererShader.frag  PointRendererShader.gs  PointRendererShader.vert  SurfaceUberShader.frag  SurfaceUberShader.vert
ProjectSettings/: ProjectSettings.asset
RECDLL_COMPILE/: CMakeLists.txt  RECTEST.cpp
RECDLL_COMPILE/Source/: rec.cpp  rec.h
RECDLL_COMPILE/Source/TuranAPI/: API_includes.cpp  ThreadedJobCore.cpp
Source/Editor/: Editor.cpp  Editor.h  Editor_Includes.cpp  Editor_Includes.h  Editor_System.cpp
Source/Editor/Editors/: Main_Window.cpp  Main_Window.h  PointCloudViewer.cpp  PointCloudViewer.h  Properties_Window.cpp  Properties_Window.h  Scene_Editor.cpp  Scene_Editor.h  Status_Window.cpp  Status_Window.h
Source/Editor/FileSystem/: EditorFileSystem_Core.cpp  EditorFileSystem_Core.h
Source/Editor/RenderContext/: Editor_DataManager.cpp  Editor_DataManager.h  Game_RenderGraph.cpp  Game_RenderGraph.h
Source/Editor/Staj/: DijkstraSPFAlgorithm.cpp  DijkstraSPFAlgorithm.h  StajMain.cpp
Source/Editor/TUBITAK/: Algorithms.cpp  Algorithms.h  DataLoader.cpp  DataLoader.h  DataTypes.h  GoogleKDTREE.c  MarchingCubes_LookUpTable.cpp  MarchingCubes_LookUpTable.h
Source/Editor/İş/: Algorithms.cpp  Algorithms.h  Algorithms_UnitTests.cpp  Algorithms_UnitTests.h  DataLoader.cpp  DataTypes.h  Demo.cpp
Source/GFX/: GFX_Core.cpp  GFX_Core.h  GFX_Display.cpp  GFX_Display.h  GFX_ENUMs.cpp  GFX_ENUMs.h  GFX_Includes.cpp  GFX_Includes.h
Source/GFX/IMGUI/: IMGUI_Core.cpp  IMGUI_Core.h  IMGUI_GFX.h  IMGUI_WINDOW.cpp  IMGUI_WINDOW.h
Source/GFX/Renderer/: GFX_RenderCommands.cpp  GFX_RenderCommands.h  GFX_RenderGraph.cpp  GFX_RenderGraph.h  GFX_Renderer.cpp  GFX_Renderer.h  GFX_Resource.cpp  GFX_Resource.h  GPU_ContentManager.cpp  (+1 more)
Source/OpenGL4/: OGL4_Core.cpp  OGL4_Core.h  OGL4_Display.cpp  OGL4_Display.h  OGL4_ENUMs.cpp  OGL4_ENUMs.h  OpenGL4_Includes.h  glad.c
Source/TuranAPI/: API_includes.h  Bitset.cpp  Bitset.h  FileSystem_Core.cpp  FileSystem_Core.h  Logger_Core.cpp  Logger_Core.h  Profiler_Core.cpp  Profiler_Core.h  ThreadedJobCore.h
Source/Vulkan/: Vulkan.vcxproj  Vulkan.vcxproj.filters
(+110 files in other folders)
